--- a/app/styles/helpers/fonts.styl
+++ b/app/styles/helpers/fonts.styl
@@ -1,32 +1,32 @@
 @font-face 
-	font-family 'Avenir Next W1G'
+	font-family 'Avenir Next W1G b'
 	src local('Avenir Next W1G Bold'), local('AvenirNextW1G-Bold'),
-		url('hinted-subset-AvenirNextW1G-Bold.woff2') format('woff2'),
-		url('hinted-subset-AvenirNextW1G-Bold.woff') format('woff')
-	font-weight bold
+		url('../fonts/hinted-subset-AvenirNextW1G-Bold.woff2') format('woff2'),
+		url('../fonts/hinted-subset-AvenirNextW1G-Bold.woff') format('woff')
+	font-weight 700
 	font-style normal
 
 @font-face 
 	font-family 'Avenir Next W1G'
 	src local('Avenir Next W1G Regular'), local('AvenirNextW1G-Regular'),
-		url('hinted-subset-AvenirNextW1G-Regular.woff2') format('woff2'),
-		url('hinted-subset-AvenirNextW1G-Regular.woff') format('woff')
+		url('../fonts/hinted-subset-AvenirNextW1G-Regular.woff2') format('woff2'),
+		url('../fonts/hinted-subset-AvenirNextW1G-Regular.woff') format('woff')
 	font-weight normal
 	font-style normal
 
 @font-face 
 	font-family 'Avenir Next W1G'
 	src local('Avenir Next W1G Demi'), local('AvenirNextW1G-Demi'),
-		url('hinted-subset-AvenirNextW1G-Demi.woff2') format('woff2'),
-		url('hinted-subset-AvenirNextW1G-Demi.woff') format('woff')
-	font-weight bold
+		url('../fonts/hinted-subset-AvenirNextW1G-Demi.woff2') format('woff2'),
+		url('../fonts/hinted-subset-AvenirNextW1G-Demi.woff') format('woff')
+	font-weight 600
 	font-style normal
 
 @font-face 
 	font-family 'Avenir Next W1G'
 	src local('Avenir Next W1G Medium'), local('AvenirNextW1G-Medium'),
-		url('hinted-subset-AvenirNextW1G-Medium.woff2') format('woff2'),
-		url('hinted-subset-AvenirNextW1G-Medium.woff') format('woff')
+		url('../fonts/hinted-subset-AvenirNextW1G-Medium.woff2') format('woff2'),
+		url('../fonts/hinted-subset-AvenirNextW1G-Medium.woff') format('woff')
 	font-weight 500
 	font-style normal
 
@@ -35,7 +35,7 @@
 	src local('Open Sans Regular'), local('OpenSans-Regular'),
 		url('../fonts/hinted-OpenSans-Regular.woff2') format('woff2'),
 		url('../fonts/hinted-OpenSans-Regular.woff') format('woff')
-	font-weight normal
+	font-weight 400
 	font-style normal
 	
 @font-face 
@@ -65,4 +65,5 @@
 
 $r = 'Roboto', Arial, "Helvetica Neue", Helvetica, sans-serif
 $a = 'Avenir Next W1G', Arial, "Helvetica Neue", Helvetica, sans-serif
+$aB = 'Avenir Next W1G b', Arial, "Helvetica Neue", Helvetica, sans-serif
 $o = 'Open Sans', Arial, "Helvetica Neue", Helvetica, sans-serif
