--- a/app/blocks/form/form.styl
+++ b/app/blocks/form/form.styl
@@ -1,2 +1,136 @@
 .form
-	display block
+	display flex
+	flex-shrink 1
+	flex-grow 1
+	&__w
+		height calc(100% - 2px)
+		display flex
+		flex-shrink 1
+		flex-grow 1
+	&__field
+		position relative
+		width 100%
+
+	&__field_label_true
+		.form__input
+			margin-top 8px
+			
+	&__field_search
+		.form__drop-w,
+		.form__drop-icon
+			position absolute
+			z-index 1
+			top 0
+		.form__drop-w
+			z-index 2
+			right 0
+			display none
+			+rmin($sm)
+				border 2px solid #e1e1e1
+				border-width 2px 0 2px 2px 
+				width 40px
+				height 44px
+				display block
+				background-color #ffffff
+				cursor pointer
+				border-radius 0 0 0 0
+				
+		.form__drop-icon
+			top 50%
+			left 50%
+			width 12px
+			height 12px
+			fill #7f8fa4
+			transform translate(-50%, -50%)
+
+	&__label
+		display block
+		color #333333
+		font-family $a
+		font-size 16px
+		font-weight 600
+		line-height 1.375
+
+	&__input
+		position relative
+		z-index 1
+		border 2px solid #e1e1e1
+		border-width 0 0 0 1px 
+		padding-left 14px
+		padding-right 14px
+		width 100%
+		height 100%
+		background-color #ffffff
+		color #5d5f63
+		font-family $r
+		font-size 14px
+		font-weight 400
+		line-height 1
+		text-overflow ellipsis
+		+placeholder()
+			color #5d5f63
+			
+		+rmin($sm)
+			border-width 2px 0 2px 2px 
+			padding-left 18px
+			padding-right 18px
+			height 44px
+			border-radius 4px 0 0 4px
+			
+
+
+	&__input_drop
+		z-index 0
+		margin-top -2px
+		border-radius 0 0 4px 4px   
+		box-shadow 0 5px 20px rgba(0, 0, 0, 0.1)
+	&__input_hide
+		display none
+	&__submit
+		resetbutton()
+		position relative
+		width 55px
+		height 100%
+		text-indent -9999px
+		border-radius 0 5px 5px 0
+		tr(background-color .3s ease)
+		&:hover
+			+rmin($sm)
+				background-color darken(#268ae1, 10)
+				tr(background-color .3s ease)
+		+rmin($sm)
+			background-color #268ae1
+			height 44px
+	&__submit-icon
+		position absolute
+		top 50%
+		left 50%
+		width 18px
+		height 18px
+		fill #268ae1
+		transform translate(-50%, -50%)
+		+rmin($sm)
+			width 16px
+			height 16px
+			fill #fff
+
+
+.form_auth
+	.form__w
+		height auto
+		flex-direction column
+	
+	.form__field
+		margin-bottom 15px
+		
+	.form__input
+		border 2px solid #e1e1e1
+		border-radius 4px
+		height 50px
+		
+	.form__submit
+		width auto
+		height 50px
+		text-indent 0
+		border-radius 4px
+		box-shadow 0 4px 8px rgba(38, 138, 225, 0.15)
