--- a/app/blocks/social/social.styl
+++ b/app/blocks/social/social.styl
@@ -1,2 +1,22 @@
 .social
-	display block
+	&__link
+		margin-right 10px
+		width 36px
+		height 36px
+		border-radius 50%
+		&:last-child
+			margin-right 0
+	&__link_drive
+		box-shadow 0px 6px 12px rgba(204, 0, 51, 0.06)
+		
+		.social__icon
+			
+			retinaSprite($drive_icon_group)
+		
+	&__icon
+		width 100%
+		height 100%
+
+	&__text
+		visuallyhidden()
+		
