--- a/app/blocks/topline/topline.styl
+++ b/app/blocks/topline/topline.styl
@@ -1,35 +1,39 @@
 .topline
 	background-color #fbfbfb 
 	&__container
+		@extends .in
 		padding-top 10px
 		padding-bottom 10px
 		display flex
 		justify-content flex-start
 		align-items center
-		+r($es)
+		+r($sm)
 			padding-top 18px
 			padding-bottom 18px
-	&__col
-		display flex
-		align-items center
+	// &__col
+	// 	display flex
+	// 	align-items center
 	&__city
 		position relative
-		margin-right 40px
+		margin-right 16px
 		padding-left 26px
+		// max-width 120px
+		min-width 120px		
 		height 100%
 		display flex
 		align-items center
-		flex-grow 0
+		flex-grow 1
 		flex-shrink 1 
-		flex-basis auto 
-		font-size $r
+		
+		flex-basis 120px 
+		font-family $r
 		font-weight 500 
 		font-size 14px
 		line-height 1.571
 		white-space nowrap 
 		// overflow hidden
-		+r($es)
-			max-width 116px
+		+rmin($sm)
+			margin-right 40px
 			
 	&__city-icon
 		position absolute
@@ -39,66 +43,88 @@
 		height 20px
 		fill #adaead
 		transform translateY(-50%)
-		+r($es)
+		+r($sm)
 			margin-right 9px
 		
 	&__city-text
 		padding-right 5px
-		+r($es)
+		+r($sm)
 			display none
 		
 	&__city-link
 		position relative
 		padding-right 17px
 		color #0d62ad
-		font-weight 600
+		font-weight 500
 		text-decoration none
 		text-overflow ellipsis
-		&:after,
-		&:before
+		&:after
 			position absolute
 			content '' 
-		&:after
 			top 100%
 			left 0
 			width 100%
 			height 1px
 			background #CED3D7
 			tr(background .3s ease)
-		&:before
-			top 50%
-			right 0
-			transform translateY(-50%)
 		&:hover
 			&:after
 				background transparent
 				tr(background .3s ease)
 				
+	&__city-arrow
+		position absolute
+		top 50%
+		right 0
+		width 11px
+		height 6px
+		fill #000000
+		transform translateY(-50%)
+				
 		// 	border-bottom 1px solid transparent 
 		
 
 	&__phone
+		position relative
 		margin-left auto
 		color #222223
 		font-family $a
 		font-size 16px
-		font-weight 400
+		font-weight 600
 		line-height 1.5
+		white-space nowrap
 		text-decoration none
+		text-overflow ellipsis
+		overflow hidden
+		+r($sm)
+			padding-right 17px
+			
+
 		
 	&__phone_state
 		display none
-		+r($es)
+		+r($sm)
 			display flex
+			
+	&__phone-icon
+		position absolute
+		top 50%
+		right 0
+		width 9px
+		height 5px
+		fill #777777
+		transform translateY(-50%)
+		
+
 	&__nav
-		+r($es)
+		+r($sm)
 			display none
 
 	&__personal-w
 		margin-left auto
 		display flex
 		align-items center
-		+r($es)
+		+r($sm)
 			display none
 		
 	&__button
@@ -108,7 +134,7 @@
 		padding-bottom 8px
 		padding-left 17px
 		white-space nowrap
-		+r($es)
+		+r($sm)
 			display none
 
 	&__personal
