--- a/app/blocks/social/social.styl
+++ b/app/blocks/social/social.styl
@@ -4,8 +4,13 @@
 		width 36px
 		height 36px
 		border-radius 50%
+		opacity 1
+		tr(opacity .3s ease)
 		&:last-child
 			margin-right 0
+		&:hover
+			opacity 0.8
+			tr(opacity .3s ease)
 	&__link_drive
 		box-shadow 0px 6px 12px rgba(204, 0, 51, 0.06)
 		
