--- a/app/blocks/form/form.styl
+++ b/app/blocks/form/form.styl
@@ -34,6 +34,8 @@
 				background-color #ffffff
 				cursor pointer
 				border-radius 0 0 0 0
+			+rmin($xl)
+				width 48px
 				
 		.form__drop-icon
 			top 50%
