--- a/app/blocks/topline/topline.styl
+++ b/app/blocks/topline/topline.styl
@@ -13,10 +13,14 @@
 			padding-top 18px
 			padding-bottom 18px
 		+rmin($sm)
+			padding-top 0px
+			padding-bottom 0px
+			padding-left 0
+		+rmin($xl)
 			padding-top 10px
 			padding-bottom 10px
-			padding-left 0
-			
+
+
 	// &__col
 	// 	display flex
 	// 	align-items center
