--- a/app/blocks/footer/footer.styl
+++ b/app/blocks/footer/footer.styl
@@ -1,4 +1,134 @@
 .footer
-	background-color #0db6ff
-	color #FFF
-	
+	border-top 2px solid #d9dcdf 
+	background-color #Fff
+	&__body
+		padding-top 30px
+		padding-bottom 30px
+		+rmin($lg)
+			padding-top 40px
+			padding-bottom 20px
+	&__container
+		@extends .in
+		padding-left 15px
+		padding-right 15px
+		display flex
+		flex-flow wrap
+		justify-content space-between
+		+rmin($lg)
+			align-items flex-start
+		
+	&__nav,
+	&__contacts
+		margin-bottom 30px
+		flex-grow 1
+		flex-shrink 0
+		flex-basis 130px
+		max-width 160px 
+		+rmin($sm)
+			max-width 200px
+		+rmin($lg)
+			margin-bottom 0
+
+	&__title
+		margin-bottom 10px
+		+rmin($sm)
+			margin-bottom 20px
+
+	// &__list
+		
+	&__item
+		margin-bottom 10px
+	&__link
+		position relative
+		
+		padding-bottom 2px
+		color #7f878e
+		line-height 1.571
+		text-decoration none
+		tr(color .3s ease)
+
+		&:hover
+			color #0d62ad
+			box-shadow inset 0 -1px 0 0 #0d62ad
+			tr(color .3s ease)
+			
+
+	&__contacts
+		+rmin($sm)
+			margin-bottom 0 
+			max-width 100%
+			flex-basis 100%
+			
+		+rmin($lg)
+			flex-basis 130px
+
+
+	&__bottom
+		background-color #fafafa
+		padding-top 20px
+		padding-bottom 25px
+		color #6d7378
+		font-family $a
+		font-weight 500  
+		line-height 1.714
+		+rmin($xl)
+			padding-top 30px
+			padding-bottom 30px
+		.footer__container
+			+rmin($sm)
+				justify-content flex-start
+			+rmin($lg)
+				position relative
+				align-items center
+		
+	&__copyright,
+	&__privacy
+		color #6d7378
+		text-decoration none
+		
+	&__copyright
+		position relative
+		margin-bottom 20px
+		&:after
+			position absolute
+			content ''
+			top 50%
+			right -20px
+			width 1px
+			height 20px
+			background-color #eeeeee
+			transform translateY(-50%)
+			+rmin($lg)
+				right -30px
+			
+		+rmin($sm)
+			margin-right 20px
+		
+		+rmin($lg)
+			margin-bottom 0
+			margin-right 30px
+
+	&__privacy
+		margin-bottom 20px
+		+rmin($sm)
+			margin-left 20px
+		+rmin($lg)
+			margin-left 30px
+			margin-bottom 0
+		&:hover
+			box-shadow inset 0 -1px 0 0 #6d7378
+
+		
+	&__payments
+		+rmin($sm)
+			width 100%
+			
+		+rmin($lg)
+			margin-left auto
+			width auto
+			max-width 380px
+			flex-basis 380px
+		
+		
+
+
