--- a/app/blocks/header/header.styl
+++ b/app/blocks/header/header.styl
@@ -53,8 +53,6 @@
 			max-width 206px
 		+rmin($xl)
 			max-width 245px
-			
-			
 	
 	&__search
 		min-width 104px
@@ -63,6 +61,8 @@
 			min-width 170px
 			max-width 240px
 			height 44px
+		+rmin($md)
+			max-width 400px
 		+rmin($xl)
 			max-width 400px
 		
@@ -71,7 +71,6 @@
 	&__social_show
 		+rmin($xl)
 			display flex
-			
 
 	&__contacts
 		display none
@@ -79,6 +78,7 @@
 			margin-left auto
 			display block
 			
+
 	&__w
 		display flex
 		flex-grow 1
