--- a/app/styles/helpers/common.styl
+++ b/app/styles/helpers/common.styl
@@ -77,42 +77,50 @@
 			height 1px
 			background #268AE1 
 			
+.title_small
+	color #000000
+	font-size 18px
+	line-height 1.555 
+	
+			
 img
 	max-width 100%
 	height auto
 	
 
 .button
+	resetbutton()
 	border 2px solid #d3d3d3
 	height 40px
 	display inline-block
 	vertical-align middle
 	color #0d62ad
 	font-weight 600
-	border-radius 4px
+	text-align center
 	text-decoration none
+	border-radius 4px
 	tr(color .3s ease)
 	&:hover
 		color darken(#0d62ad, 10)
 		tr(color .3s ease)
 	
-	&.button_biggest
-		height 50px
-		background-color #268ae1
+.button_biggest
+	height 50px
+	background-color #268ae1
+	color #ffffff
+	font-family $aB
+	font-size 14px
+	font-weight 700
+	letter-spacing 1.12px
+	line-height 1
+	text-transform uppercase
+	border-radius 4px
+	box-shadow 0 4px 8px rgba(38, 138, 225, 0.15)
+	tr(background-color .3s ease)
+	&:hover
 		color #ffffff
-		font-family $aB
-		font-size 14px
-		font-weight 700
-		letter-spacing 1.12px
-		line-height 1
-		text-transform uppercase
-		border-radius 4px
-		box-shadow 0 4px 8px rgba(38, 138, 225, 0.15)
+		background-color darken(#268ae1, 10)
 		tr(background-color .3s ease)
-		&:hover
-			color #ffffff
-			background-color darken(#268ae1, 10)
-			tr(background-color .3s ease)
 
 .wysiwyg
 	h2,
