--- a/app/blocks/footer/footer.styl
+++ b/app/blocks/footer/footer.styl
@@ -124,11 +124,14 @@
 			width 100%
 			
 		+rmin($lg)
-			margin-left auto
+			// margin-left auto
+			margin-top 20px
 			width auto
 			max-width 380px
 			flex-basis 380px
 		
-		
+		+rmin($xl)
+			margin-top 0
+			margin-left auto
 
 
