--- a/app/blocks/text/text.styl
+++ b/app/blocks/text/text.styl
@@ -1,7 +1,25 @@
-// .text
-// 	&__image
-		
-// 	&__entry
-		
+.text
+	&__container
+		padding-top 30px
+		padding-bottom 40px
+		+rmin($sm)
+			padding-top 40px
+	&__col 
+		display flex
+		align-items flex-start
 
+	&__image
+		display none
+		+rmin($sm)
+			display block
+			margin-right 30px
+			flex-shrink 0
+			flex-grow 1
+			flex-basis 155px
+			max-width 265px
+		
+		+rmin($lg)
+			flex-basis 265px
+			
+			
 		
