--- a/app/styles/helpers/common.styl
+++ b/app/styles/helpers/common.styl
@@ -82,7 +82,7 @@
 	font-size 18px
 	line-height 1.555 
 	
-			
+
 img
 	max-width 100%
 	height auto
@@ -123,32 +123,45 @@ img
 		tr(background-color .3s ease)
 
 .wysiwyg
-	h2,
-	h3
-		margin-top 60px
+	color #555555
+	font-family $o
+	font-size 14px
+	font-weight 400
+	line-height 1.571
+	h1
+		margin-bottom 18px
+		color #333333
+		font-family $a
+		font-size 20px
+		font-weight 600
+		line-height 1.4
+		
+	// h2,
+	// h3
+	// 	margin-top 60px
 
-		margin-bottom 24px
-		color #000000
-		font-size 22px
-		font-weight 400
-		letter-spacing 1px
-		line-height 1.3
-	h3
-		margin-top 30px
-
+	// 	margin-bottom 24px
+	// 	color #000000
+	// 	font-size 22px
+	// 	font-weight 400
+	// 	letter-spacing 1px
+	// 	line-height 1.3
+	// h3
+	// 	margin-top 30px
+		
+	a
+		color #0d62ad
+		text-decoration none
+		
 	p
-		margin-top 30px
-		color #817f7f
-		font-size 18px
-		font-weight 400
-		line-height 1.38
+		margin-bottom 18px
 
-	ul
-		margin-top 30px
-		margin-bottom 35px
-		margin-left 30px
-		li
-			color #817f7f
-			font-size 18px
-			font-weight 400
-			line-height 1.38
+	// ul
+	// 	margin-top 30px
+	// 	margin-bottom 35px
+	// 	margin-left 30px
+	// 	li
+	// 		color #817f7f
+	// 		font-size 18px
+	// 		font-weight 400
+	// 		line-height 1.38
